--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -17,5 +18,6 @@
     "mongoose": "^8.19.1",
     "nodemon": "^3.1.10"
   },
+  "type": "module",
   "description": ""
 }
