--- a/server/package.json
+++ b/server/package.json
@@ -16,8 +16,8 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.1",
-    "nodemon": "^3.1.10",
-    "resend": "^6.1.2"
+    "nodemailer": "^7.0.9",
+    "nodemon": "^3.1.10"
   },
   "type": "module",
   "description": ""
