--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "lucide-react": "^0.545.0",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.9.3",
+    "react-spinners": "^0.17.0",
     "tailwindcss": "^3.4.18"
   },
   "devDependencies": {
